# libGeminiDrivers

./: CMakeLists.txt  README.md  generate_cmake_build.sh
libHumidity/: CMakeLists.txt
libHumidity/include/: Hts221.h
libHumidity/src/: Hts221.cpp
libInterfaces/: CMakeLists.txt
libInterfaces/include/: I2cInterface.h
